# ACMEat

./: .gitignore  README.md
Applications/: acmeat_order_confirmation.bpmn  acmeat_restaurant_closings_reset.bpmn  documentation.md  post_install.py  pyproject.toml  soaptest.py
Applications/acmeat/: __init__.py  __main__.py  authentication.py  configuration.py  crud.py  dependencies.py  handlers.py
Applications/acmeat/database/: db.py  enums.py  models.py
Applications/acmeat/errors/: __init__.py
Applications/acmeat/routers/: __init__.py  users.py
Applications/acmeat/schemas/: base.py  edit.py  error.py  full.py  read.py
Applications/acmeat/services/: ACMEManager.py  activate_delivery.py  branchtest_starter.py  closings.py  confirm_order.py  deliverer_abort.py  deliverer_confirmation.py  deliverer_preview.py  messageTest.py  order_delete.py  pay_deliverer.py  pay_restaurant.py  payment_received.py  payment_request.py  restaurant_abort.py  restaurant_confirmation.py  sandbox.py  serverTest.py  test_branchA.py  test_branchB.py  test_common.py  test_services.py  user_refund.py  worker.py
Applications/acmedeliver/: __main__.py  authentication.py  configuration.py  crud.py  dependencies.py  handlers.py
Applications/acmedeliver/database/: db.py  enums.py  models.py
Applications/acmegeolocate/: __main__.py  configuration.py  crud.py  handlers.py
Applications/acmerestaurant/: __main__.py  authentication.py  configuration.py  crud.py  dependencies.py  handlers.py
Applications/bank_intermediary/: __main__.py  configuration.py  handlers.py
Bank/: acmeat.ol  (+6 more)
(+157 files in other folders)
