[tool.poetry]
name = "acmeat"
version = "0.1.0"
description = ""
authors = ["Nemesis <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
python-multipart = "^0.0.5"
camunda-external-task-client-python3 = "^4.3.0"
lazy-object-proxy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
